--- a/Depeg-swap/package.json
+++ b/Depeg-swap/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "test": "npx hardhat test",
+    "test:all": "npx hardhat clean && forge clean && forge test -vvv && npx hardhat test",
     "build": "npx hardhat compile",
+    "compile:organise":"npx hardhat clean && npx hardhat compile && node script/node-scripts/organiseArtifacts.js",
     "lint:contract": "npx solhint 'contracts/**/*.sol'",
     "lint:contract:fix": "npx solhint 'contracts/**/*.sol' --fix"
   },
@@ -35,6 +37,7 @@
   },
   "dependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
+    "@nomicfoundation/hardhat-foundry": "^1.1.2",
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@openzeppelin/hardhat-upgrades": "^3.1.0",
